# vanha_ot-harjoitustyo

./: README.md  README.md.save  tyoaikakirjanpito.md
laskarit/viikko1/: gitlog.txt  vaatimusmaarittely.md
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtava1.md
matopeli/: .env  .env.test  .gitignore  matopeli.py  pyproject.toml  tasks.py  users.db
matopeli/dokumentaatio/: changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
matopeli/src/: SnakeGame.py  database_connection.py  index.py  initialize_database.py  matopeli.py
matopeli/src/UI/: Menu.py  StartScreen.py
matopeli/src/entities/: SnakeGame.py  StartScreen.py  food.py  snake.py
matopeli/src/tests/: food_test.py  matopeli_test.py  snake_test.py
