[tool.poetry]
name = "matopeli"
version = "0.1.0"
description = ""
authors = ["Veeti Enckelman <veeti.oliver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
cowsay = "^4.0"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
